# lager

./: .cookiecutterrc  .gitattributes  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  afile.py  decs.py  lager.py  pyproject.toml  sc2.py  scratch.py  setup.cfg  setup.py  tox.ini
.github/workflows/: lager_ci.yml
docs/: conf.py  installation.rst  usage.rst
docs/reference/: index.rst  lager.rst
herm/: something.py
keg/: keg.js  load.js  package.json  server.js
keg/src/: App.css  App.js  herm.js  logs.json
lager/: __init__.py  _version.py  core.py  httpx.py  pydantic.py
og/: LICENSE.txt  lager.py  lager2.py  setup.cfg  test_lager.py  trials.py
serverstuff/: lager_client.py  lagerserver.js  ping.js  server.js
src/: lager.bakpy  lager.py  sc2.py  scratch.py  test_tornado_fmt.py
src/lager/: __init__.py  _version.py  const.py  core.py  httpx.py  pydantic.py
tests/: test_lager.py  test_version.py
