[tool.poetry]
name = "lager"
version = "0.8.5"
description = "ez lager"
authors = ["jesse rubin <jessekrubin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
structlog = "^19.1"
python-rapidjson = "^0.7.2"
colorama = "0.3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
