[tool.poetry]
name = "lager"
version = "0.10.0"
description = "ez lager"
authors = ["jesse rubin <jessekrubin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
jsonbourne = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
