[tool.poetry]
name = "lager"
version = "0.2.2"
description = "ez lager that uses loguru"
authors = ["jesse rubin <jessekrubin@gmail.com>"]
license = "MIT"
packages = [
    { include = "lager.py", from = "." }
]

[tool.poetry.dependencies]
python = "^3.5"
loguru = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
